--- a/index.html
+++ b/index.html
@@ -38,19 +38,24 @@ button { padding: 4px 8px; }
 </table>
 
 <script>
-const WEB_APP_URL = location.origin + location.pathname; 
+/**
+ * GH 版 UI 前端
+ * 注意：WEB_APP_URL 必須填 Apps Script Web App 的 URL
+ */
+const WEB_APP_URL = 'https://script.google.com/macros/s/你的WebAppID/exec';
 let mainVersion = 0, missedVersion = 0;
 
+// 取得主表資料
 async function fetchMain() {
   const res = await fetch(WEB_APP_URL);
   const json = await res.json();
-  if (json.version !== mainVersion) {
-    mainVersion = json.version;
-    const tbody = document.querySelector("#drugTable tbody");
-    tbody.innerHTML = "";
-    json.data.forEach((item, idx) => {
-      const tr = document.createElement("tr");
-      tr.innerHTML = `
+  if(json.version!==mainVersion){
+    mainVersion=json.version;
+    const tbody=document.querySelector("#drugTable tbody");
+    tbody.innerHTML="";
+    json.data.forEach((item,idx)=>{
+      const tr=document.createElement("tr");
+      tr.innerHTML=`
         <td>${idx+1}</td>
         <td>${item.name}</td>
         <td>${item.date}</td>
@@ -64,16 +69,17 @@ async function fetchMain() {
   fetchMissed();
 }
 
+// 取得漏吃藥品
 async function fetchMissed() {
   const res = await fetch(WEB_APP_URL+'?mode=missed');
   const json = await res.json();
-  if (json.version !== missedVersion) {
-    missedVersion = json.version;
-    const tbody = document.querySelector("#missedTable tbody");
-    tbody.innerHTML = "";
-    json.missed.forEach((item, idx) => {
-      const tr = document.createElement("tr");
-      tr.innerHTML = `
+  if(json.version!==missedVersion){
+    missedVersion=json.version;
+    const tbody=document.querySelector("#missedTable tbody");
+    tbody.innerHTML="";
+    json.missed.forEach((item,idx)=>{
+      const tr=document.createElement("tr");
+      tr.innerHTML=`
         <td>${idx+1}</td>
         <td>${item.name}</td>
         <td>${item.date}</td>
@@ -84,30 +90,32 @@ async function fetchMissed() {
   }
 }
 
-async function toggleDone(cb) {
-  const rowIndex = parseInt(cb.dataset.rowIndex), done = cb.checked;
-  const res = await fetch(WEB_APP_URL, {
+// 勾選已吃
+async function toggleDone(cb){
+  const rowIndex=parseInt(cb.dataset.rowIndex), done=cb.checked;
+  const res=await fetch(WEB_APP_URL,{
     method:"POST",
-    body: JSON.stringify({action:"update", data:[{rowIndex, done}]})
+    body:JSON.stringify({action:"update", data:[{rowIndex, done}]})
   });
-  const json = await res.json();
+  const json=await res.json();
   if(json.status==="success") fetchMain();
-  else { alert("更新失敗"); cb.checked = !done; }
+  else { alert("更新失敗"); cb.checked=!done; }
 }
 
-async function addDrug() {
-  const selected = document.getElementById("drugSelect").value;
-  const manual = document.getElementById("newName").value.trim();
-  const name = manual || selected;
-  const time = document.getElementById("newTime").value;
-  if(!name || !time){ alert("請輸入藥品名稱與時間"); return; }
-  const today = new Date();
-  const date = today.getFullYear()+'/'+(today.getMonth()+1)+'/'+today.getDate();
-  const res = await fetch(WEB_APP_URL, {
+// 新增藥品
+async function addDrug(){
+  const selected=document.getElementById("drugSelect").value;
+  const manual=document.getElementById("newName").value.trim();
+  const name=manual||selected;
+  const time=document.getElementById("newTime").value;
+  if(!name||!time){ alert("請輸入藥品名稱與時間"); return; }
+  const today=new Date();
+  const date=`${today.getFullYear()}/${today.getMonth()+1}/${today.getDate()}`;
+  const res=await fetch(WEB_APP_URL,{
     method:"POST",
-    body: JSON.stringify({action:"write", data:{name,date,time,done:false}})
+    body:JSON.stringify({action:"write", data:{name,date,time,done:false}})
   });
-  const json = await res.json();
+  const json=await res.json();
   if(json.status==="success"){
     document.getElementById("newName").value="";
     document.getElementById("newTime").value="";
@@ -115,31 +123,35 @@ async function addDrug() {
   } else alert("新增失敗: "+json.message);
 }
 
-async function deleteDrug(rowIndex) {
+// 刪除藥品
+async function deleteDrug(rowIndex){
   if(!confirm("確定刪除?")) return;
-  const res = await fetch(WEB_APP_URL, {
+  const res=await fetch(WEB_APP_URL,{
     method:"POST",
-    body: JSON.stringify({action:"delete", data:{rowIndex}})
+    body:JSON.stringify({action:"delete", data:{rowIndex}})
   });
-  const json = await res.json();
+  const json=await res.json();
   if(json.status==="success"){ fetchMain(); fetchHistory(); }
-  else alert("刪除失敗:"+json.message);
+  else alert("刪除失敗: "+json.message);
 }
 
-async function fetchHistory() {
-  const res = await fetch(WEB_APP_URL+'?mode=history');
-  const json = await res.json();
-  const select = document.getElementById("drugSelect");
-  select.innerHTML = '<option value="">-- 選擇歷史藥品 --</option>';
+// 歷史藥品
+async function fetchHistory(){
+  const res=await fetch(WEB_APP_URL+'?mode=history');
+  const json=await res.json();
+  const select=document.getElementById("drugSelect");
+  select.innerHTML='<option value="">-- 選擇歷史藥品 --</option>';
   json.history.forEach(name=>{
-    const opt = document.createElement("option");
-    opt.value = name; opt.textContent = name;
+    const opt=document.createElement("option");
+    opt.value=name; opt.textContent=name;
     select.appendChild(opt);
   });
 }
 
+// 初始化
 fetchMain(); fetchHistory();
 setInterval(()=>{ fetchMain(); fetchHistory(); },5000);
+
 </script>
 </body>
 </html>
